# windoge98-faucet

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/windoge98-faucet-backend/: Cargo.toml
src/windoge98-faucet-backend/src/: lib.rs
src/windoge98-faucet-frontend/: package.json
src/windoge98-faucet-frontend/src/lib/: canisters.js
