[package]
name = "windoge98-faucet-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.6"
ic-cdk = "0.13.1"
ic-cdk-timers = "0.7"
ic-cdk-macros = "0.13.2"
serde = "1.0"
ic-certified-map = "0.4.0"
percent-encoding = "2.1"
serde_cbor = "0.11"
sha2 = "0.10"
base64 = "0.22.0"
include-base64 = "0.1.0"
icrc-ledger-types = "0.1.5"
ic-ledger-types = "0.10.0"